--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pylint = "^3.2.3"
 pytest = "^8.2.2"
 pylint-pydantic = "^0.3.2"
 believe = "^1.0.14"
+pytest-cov = "^5.0.0"
 
 [build-system]
 requires = ["poetry-core"]
