--- a/.github/workflows/code_integration.yml
+++ b/.github/workflows/code_integration.yml
@@ -10,6 +10,10 @@ on:
       - master
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 env:
   BUILD_VERSION: ${{ github.run_id }}
 
