--- a/.github/workflows/code_integration.yml
+++ b/.github/workflows/code_integration.yml
@@ -51,11 +51,13 @@ jobs:
         run: |
           export PATH="$HOME/.local/bin:$PATH"
           poetry install
+      - name: Pack .venv
+        run: tar -cvf venv.tar .venv
       - name: Upload .venv
         uses: actions/upload-artifact@v4
         with:
           name: venv
-          path: .venv/
+          path: venv.tar
   lint:
     needs: prepare
     name: Lint
@@ -73,7 +75,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: venv
-          path: .venv/
+          path: .venv.tar
+      - name: Extract .venv
+        run: tar -xvf .venv.tar
       - name: Run Black check / Isort check / Pylint
         run: |
           source .venv/bin/activate
@@ -97,7 +101,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: venv
-          path: .venv/
+          path: .venv.tar
+      - name: Extract .venv
+        run: tar -xvf .venv.tar
       - name: Run tests with coverage
         run: |
           source .venv/bin/activate
