--- a/.gitignore
+++ b/.gitignore
@@ -354,3 +354,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+### Project
+docs/openapi.json
+coverage_report
+venv.tar
