--- a/.github/workflows/code_integration.yml
+++ b/.github/workflows/code_integration.yml
@@ -77,7 +77,7 @@ jobs:
           name: venv
       - name: Extract .venv
         run: |
-          tar -xvf venv.tar
+          tar -xf venv.tar
           rm venv.tar
       - name: Run Black check / Isort check / Pylint
         run: |
@@ -104,7 +104,7 @@ jobs:
           name: venv
       - name: Extract .venv
         run: |
-          tar -xvf venv.tar
+          tar -xf venv.tar
           rm venv.tar
       - name: Run tests with coverage
         run: |
@@ -134,7 +134,7 @@ jobs:
           name: venv
       - name: Extract .venv
         run: |
-          tar -xvf venv.tar
+          tar -xf venv.tar
           rm venv.tar
       - name: Build api document
         run: |
