--- a/.github/workflows/code_integration.yml
+++ b/.github/workflows/code_integration.yml
@@ -118,7 +118,7 @@ jobs:
   docs:
     name: API Docs
     runs-on: ubuntu-latest
-    needs: prepare
+    needs: test
     steps:
       - name: Checkout
         uses: actions/checkout@v4
