--- a/.github/workflows/code_integration.yml
+++ b/.github/workflows/code_integration.yml
@@ -119,6 +119,8 @@ jobs:
     name: API Docs
     runs-on: ubuntu-latest
     needs: test
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -140,11 +142,10 @@ jobs:
         run: |
           source .venv/bin/activate
           python utils/export_openapi.py
-      - name: Upload api document
-        uses: actions/upload-artifact@v4
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          name: api_docs
-          path: docs/
+          folder: docs
   cleanup:
     name: Cleanup
     runs-on: ubuntu-latest
